updated examples, added verbosity to LF and schema registration

--- a/examples/basic_example.ipynb
+++ b/examples/basic_example.ipynb
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -70,14 +70,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Connected to Extraction Database: /home/dev/Turing/elicit/examples/test_db.sqlite\n"
+      "Connected to Extraction Database: /home/dev/Turing/elicit/examples/test_db.sqlite\n",
+      "Registered schema: categories\n",
+      "Registered schema: keywords\n"
      ]
     }
    ],
@@ -108,13 +110,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Registered labelling function: Keyword Match\n",
       "Running LF: Keyword Match\n",
       "Loading models and stuff...\n"
      ]
@@ -123,7 +126,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Extracting variable: cat_or_dog: 100%|██████████| 2/2 [00:00<00:00,  2.86it/s]\n"
+      "Extracting variable: cat_or_dog: 100%|██████████| 2/2 [00:00<00:00,  2.51it/s]\n"
      ]
     }
    ],
@@ -141,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
