--- a/examples/basic_example.ipynb
+++ b/examples/basic_example.ipynb
@@ -4,6 +4,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Elicit Basics\n",
+    "\n",
     "This example will walk you through the basics of how to:\n",
     "- Create an \"Extractor\", a controller which handles the extraction.\n",
     "- Add required labelling functions and schemas to the extractor.\n",
@@ -12,7 +14,9 @@
     "\n",
     "We will be using the existing Keyword Extractor labelling function as an example.\n",
     "\n",
-    "Begin by importing the requirements:"
+    "We begin by importing the requirements.\n",
+    "\n",
+    "## Importing Requirements"
    ]
   },
   {
@@ -54,8 +58,38 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Lets first create an Extractor object, pointing at the DB file we want to create.\n",
-    "Then, we will add the required schemas. These are the configuration files the labelling functions will use to extract the data.\n",
+    "## Creating Extractor\n",
+    "\n",
+    "Lets first create an Extractor object, pointing at the DB file we want to create."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Connected to Extraction Database: /home/dev/Turing/elicit/examples/test_db.sqlite\n"
+     ]
+    }
+   ],
+   "source": [
+    "# delete db if already exists (just for testing purposes)\n",
+    "(current_dir / \"test_db.sqlite\").unlink(missing_ok=True)\n",
+    "\n",
+    "extractor = Extractor(db_path=current_dir / \"test_db.sqlite\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Registering Schemas\n",
+    "\n",
+    "Next, we will add the required schemas. These are the configuration files the labelling functions will use to extract the data.\n",
     "\n",
     "In this case, we require:\n",
     "- A categories schema\n",
@@ -70,25 +104,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Connected to Extraction Database: /home/dev/Turing/elicit/examples/test_db.sqlite\n",
       "Registered schema: categories\n",
       "Registered schema: keywords\n"
      ]
     }
    ],
    "source": [
-    "# delete db if already exists (just for testing purposes)\n",
-    "(current_dir / \"test_db.sqlite\").unlink(missing_ok=True)\n",
-    "\n",
-    "extractor = Extractor(db_path=current_dir / \"test_db.sqlite\")\n",
-    "\n",
     "\n",
     "categories = {\"cat_or_dog\": [\"cat\", \"dog\"]}\n",
     "keywords = {\"cat_or_dog\": {\"cat\": [\"meow\", \"hiss\"], \"dog\": [\"woof\", \"bark\"]}}\n",
@@ -103,21 +131,46 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Next, we register the labelling function. In this case, we have just imported the pre-defined Keyword Extractor labelling function. In a future tutorial, we will create our own labelling functions.\n",
+    "## Registering Labelling Functions\n",
     "\n",
-    "We can now run the extraction process, pointing to the directory containing the documents we want to extract from. Currently PDFs and TXTs are supported."
+    "Next, we register the labelling function. In this case, we have just imported the pre-defined Keyword Extractor labelling function. In a future tutorial, we will create our own labelling functions."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Registered labelling function: Keyword Match\n",
+      "Registered labelling function: Keyword Match\n"
+     ]
+    }
+   ],
+   "source": [
+    "extractor.register_labelling_function(KeywordMatchLF)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Running the extractor\n",
+    "\n",
+    "We can now run the extraction process, we pass a list of Paths pointing to each document. Currently PDFs and TXTs are supported."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "Running LF: Keyword Match\n",
       "Loading models and stuff...\n"
      ]
@@ -126,12 +179,11 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Extracting variable: cat_or_dog: 100%|██████████| 2/2 [00:00<00:00,  2.51it/s]\n"
+      "Extracting variable: cat_or_dog: 100%|██████████| 2/2 [00:00<00:00,  2.54it/s]\n"
      ]
     }
    ],
    "source": [
-    "extractor.register_labelling_function(KeywordMatchLF)\n",
     "extractor.run(docs)"
    ]
   },
@@ -139,12 +191,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Running the user interface\n",
+    "\n",
     "Finally, we can launch the user interface to begin annotating the extractions, pointing at the database the extractions were just added to."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
