--- a/examples/basic_example.ipynb
+++ b/examples/basic_example.ipynb
@@ -40,10 +40,10 @@
     "from elicit.labelling_functions import KeywordMatchLF\n",
     "# Import Pathlib, for better path handling.\n",
     "from pathlib import Path\n",
+    "# Import OS so we know where the notebook is!\n",
     "import os\n",
-    "current_path = os.path.abspath('')\n",
     "\n",
-    "from elicit.main import _kill_ui\n",
+    "current_path = os.path.abspath('')\n",
     "\n",
     "# get current directory\n",
     "current_dir = Path(current_path)\n",
