--- a/examples/basic_example.ipynb
+++ b/examples/basic_example.ipynb
@@ -179,7 +179,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Extracting variable: cat_or_dog: 100%|██████████| 2/2 [00:00<00:00,  2.54it/s]\n"
+      "Extracting variable: cat_or_dog: 100%|██████████| 2/2 [00:00<00:00,  2.48it/s]\n"
      ]
     }
    ],
@@ -193,7 +193,7 @@
    "source": [
     "## Running the user interface\n",
     "\n",
-    "Finally, we can launch the user interface to begin annotating the extractions, pointing at the database the extractions were just added to."
+    "Finally, we can launch the user interface to begin annotating the extractions, pointing either to a database path, or simply passing in the extractor object."
    ]
   },
   {
@@ -222,7 +222,7 @@
     }
    ],
    "source": [
-    "launch_ui(db_path=current_dir / \"test_db.sqlite\")"
+    "launch_ui(extractor=extractor)"
    ]
   }
  ],
