renamed LF folder

--- a/examples/basic_example.ipynb
+++ b/examples/basic_example.ipynb
@@ -37,7 +37,7 @@
     "# Import Extractor class and launch UI function.\n",
     "from elicit import Extractor, launch_ui\n",
     "# Import the Keyword Match Labelling Function.\n",
-    "from elicit.labelling_functions import KeywordMatchLF\n",
+    "from elicit.generic_labelling_functions import KeywordMatchLF\n",
     "# Import Pathlib, for better path handling.\n",
     "from pathlib import Path\n",
     "# Import OS so we know where the notebook is!\n",
