changed human interaction buttons, slight ui update

--- a/examples/basic_example.ipynb
+++ b/examples/basic_example.ipynb
@@ -21,18 +21,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Current directory: /home/dev/Turing/elicit/examples\n",
-      "Documents: ['doc_1.txt', 'doc_2.txt']\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Import Extractor class and launch UI function.\n",
     "from elicit import Extractor, launch_ui\n",
@@ -65,17 +56,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Connected to Extraction Database: /home/dev/Turing/elicit/examples/test_db.sqlite\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# delete db if already exists (just for testing purposes)\n",
     "(current_dir / \"test_db.sqlite\").unlink(missing_ok=True)\n",
@@ -104,18 +87,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Registered schema: categories\n",
-      "Registered schema: keywords\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "\n",
     "categories = {\"cat_or_dog\": [\"cat\", \"dog\"]}\n",
@@ -138,17 +112,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Registered labelling function: Keyword Match\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "extractor.register_labelling_function(KeywordMatchLF)"
    ]
@@ -164,25 +130,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Running LF: Keyword Match\n",
-      "Loading models and stuff...\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Extracting variable: cat_or_dog: 100%|██████████| 2/2 [00:00<00:00,  2.48it/s]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "extractor.run(docs)"
    ]
@@ -198,31 +148,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "Launched UI at: <a href=\"http://localhost:8080\">http://localhost:8080</a>"
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "UI Killed\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "launch_ui(extractor=extractor)"
+    "#launch_ui(extractor=extractor, output=True)"
    ]
   }
  ],
