added fine tuning for generic models

--- a/examples/basic_example.ipynb
+++ b/examples/basic_example.ipynb
@@ -47,7 +47,7 @@
     "# Import Extractor class and launch UI function.\n",
     "from elicit import Extractor, launch_ui\n",
     "# Import the Keyword Match Labelling Function.\n",
-    "from elicit.generic_labelling_functions import KeywordMatchLF, NLILabellingFunction\n",
+    "from elicit.generic_labelling_functions import KeywordMatchLF, SimilarityLabellingFunction\n",
     "# Import Pathlib, for better path handling.\n",
     "from pathlib import Path\n",
     "# Import OS so we know where the notebook is!\n",
@@ -160,13 +160,13 @@
      "output_type": "stream",
      "text": [
       "Registered labelling function: Keyword Match\n",
-      "Registered labelling function: Q&A → NLI Transformer\n"
+      "Registered labelling function: Q&A → Similarity Transformer\n"
      ]
     }
    ],
    "source": [
     "extractor.register_labelling_function(KeywordMatchLF)\n",
-    "extractor.register_labelling_function(NLILabellingFunction)"
+    "extractor.register_labelling_function(SimilarityLabellingFunction)"
    ]
   },
   {
@@ -180,9 +180,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Running LF: Keyword Match\n",
+      "Loading Resources.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Extracting variable: cat_or_dog: 100%|██████████| 2/2 [00:01<00:00,  1.54it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Running LF: Q&A → Similarity Transformer\n",
+      "Loading Resources.\n",
+      "Fine tuning similarity model found, loading...\n",
+      "Fine tuned Q&A model found, loading...\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "The model 'RobertaForQuestionAnsweringWithNegatives' is not supported for question-answering. Supported models are ['QDQBertForQuestionAnswering', 'FNetForQuestionAnswering', 'GPTJForQuestionAnswering', 'LayoutLMv2ForQuestionAnswering', 'RemBertForQuestionAnswering', 'CanineForQuestionAnswering', 'RoFormerForQuestionAnswering', 'BigBirdPegasusForQuestionAnswering', 'BigBirdForQuestionAnswering', 'ConvBertForQuestionAnswering', 'LEDForQuestionAnswering', 'DistilBertForQuestionAnswering', 'AlbertForQuestionAnswering', 'CamembertForQuestionAnswering', 'BartForQuestionAnswering', 'MBartForQuestionAnswering', 'LongformerForQuestionAnswering', 'XLMRobertaForQuestionAnswering', 'RobertaForQuestionAnswering', 'SqueezeBertForQuestionAnswering', 'BertForQuestionAnswering', 'XLNetForQuestionAnsweringSimple', 'FlaubertForQuestionAnsweringSimple', 'MegatronBertForQuestionAnswering', 'MobileBertForQuestionAnswering', 'XLMForQuestionAnsweringSimple', 'ElectraForQuestionAnswering', 'ReformerForQuestionAnswering', 'FunnelForQuestionAnswering', 'LxmertForQuestionAnswering', 'MPNetForQuestionAnswering', 'DebertaForQuestionAnswering', 'DebertaV2ForQuestionAnswering', 'IBertForQuestionAnswering', 'SplinterForQuestionAnswering'].\n",
+      "Extracting variable: cat_or_dog: 100%|██████████| 2/2 [00:00<00:00,  7.21it/s]\n"
+     ]
+    }
+   ],
    "source": [
     "extractor.run(docs)"
    ]
@@ -198,7 +232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -243,9 +277,9 @@
      "text": [
       "Loading Resources for LF: Keyword Match\n",
       "Training LF: Keyword Match on variable: cat_or_dog\n",
-      "2 documents with validations for variable: cat_or_dog\n",
-      "Loading Resources for LF: Q&A → NLI Transformer\n",
-      "Fine tuned Sequence Classifier model found, loading...\n",
+      "4 documents with validations for variable: cat_or_dog\n",
+      "Loading Resources for LF: Q&A → Similarity Transformer\n",
+      "No fine tuning similarity model found, loading default.\n",
       "Fine tuned Q&A model found, loading...\n"
      ]
     },
@@ -253,77 +287,23 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "The model 'RobertaForQuestionAnsweringWithNegatives' is not supported for question-answering. Supported models are ['QDQBertForQuestionAnswering', 'FNetForQuestionAnswering', 'GPTJForQuestionAnswering', 'LayoutLMv2ForQuestionAnswering', 'RemBertForQuestionAnswering', 'CanineForQuestionAnswering', 'RoFormerForQuestionAnswering', 'BigBirdPegasusForQuestionAnswering', 'BigBirdForQuestionAnswering', 'ConvBertForQuestionAnswering', 'LEDForQuestionAnswering', 'DistilBertForQuestionAnswering', 'AlbertForQuestionAnswering', 'CamembertForQuestionAnswering', 'BartForQuestionAnswering', 'MBartForQuestionAnswering', 'LongformerForQuestionAnswering', 'XLMRobertaForQuestionAnswering', 'RobertaForQuestionAnswering', 'SqueezeBertForQuestionAnswering', 'BertForQuestionAnswering', 'XLNetForQuestionAnsweringSimple', 'FlaubertForQuestionAnsweringSimple', 'MegatronBertForQuestionAnswering', 'MobileBertForQuestionAnswering', 'XLMForQuestionAnsweringSimple', 'ElectraForQuestionAnswering', 'ReformerForQuestionAnswering', 'FunnelForQuestionAnswering', 'LxmertForQuestionAnswering', 'MPNetForQuestionAnswering', 'DebertaForQuestionAnswering', 'DebertaV2ForQuestionAnswering', 'IBertForQuestionAnswering', 'SplinterForQuestionAnswering'].\n",
-      "***** Running training *****\n",
-      "  Num examples = 2\n",
-      "  Num Epochs = 3\n",
-      "  Instantaneous batch size per device = 16\n",
-      "  Total train batch size (w. parallel, distributed & accumulation) = 16\n",
-      "  Gradient Accumulation steps = 1\n",
-      "  Total optimization steps = 3\n"
+      "The model 'RobertaForQuestionAnsweringWithNegatives' is not supported for question-answering. Supported models are ['QDQBertForQuestionAnswering', 'FNetForQuestionAnswering', 'GPTJForQuestionAnswering', 'LayoutLMv2ForQuestionAnswering', 'RemBertForQuestionAnswering', 'CanineForQuestionAnswering', 'RoFormerForQuestionAnswering', 'BigBirdPegasusForQuestionAnswering', 'BigBirdForQuestionAnswering', 'ConvBertForQuestionAnswering', 'LEDForQuestionAnswering', 'DistilBertForQuestionAnswering', 'AlbertForQuestionAnswering', 'CamembertForQuestionAnswering', 'BartForQuestionAnswering', 'MBartForQuestionAnswering', 'LongformerForQuestionAnswering', 'XLMRobertaForQuestionAnswering', 'RobertaForQuestionAnswering', 'SqueezeBertForQuestionAnswering', 'BertForQuestionAnswering', 'XLNetForQuestionAnsweringSimple', 'FlaubertForQuestionAnsweringSimple', 'MegatronBertForQuestionAnswering', 'MobileBertForQuestionAnswering', 'XLMForQuestionAnsweringSimple', 'ElectraForQuestionAnswering', 'ReformerForQuestionAnswering', 'FunnelForQuestionAnswering', 'LxmertForQuestionAnswering', 'MPNetForQuestionAnswering', 'DebertaForQuestionAnswering', 'DebertaV2ForQuestionAnswering', 'IBertForQuestionAnswering', 'SplinterForQuestionAnswering'].\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Training LF: Q&A → NLI Transformer on variable: cat_or_dog\n",
-      "2 documents with validations for variable: cat_or_dog\n",
-      "Training Seq. Classification Model\n",
-      "Fine-tuning zero-shot sequence classifier for variable cat_or_dog on 2 samples.\n"
-     ]
-    },
-    {
-     "data": {
-      "text/html": [
-       "\n",
-       "    <div>\n",
-       "      \n",
-       "      <progress value='3' max='3' style='width:300px; height:20px; vertical-align: middle;'></progress>\n",
-       "      [3/3 00:40, Epoch 3/3]\n",
-       "    </div>\n",
-       "    <table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: left;\">\n",
-       "      <th>Step</th>\n",
-       "      <th>Training Loss</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "  </tbody>\n",
-       "</table><p>"
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "\n",
-      "Training completed. Do not forget to share your model on huggingface.co/models =)\n",
-      "\n",
-      "\n",
-      "Configuration saved in /home/dev/Turing/elicit/examples/models/seq_model/config.json\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Saving Trained Model to /home/dev/Turing/elicit/examples/models/seq_model\n"
+      "Training LF: Q&A → Similarity Transformer on variable: cat_or_dog\n",
+      "4 documents with validations for variable: cat_or_dog\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Model weights saved in /home/dev/Turing/elicit/examples/models/seq_model/pytorch_model.bin\n"
+      "Iteration: 100%|██████████| 2/2 [00:00<00:00, 11.18it/s]\n",
+      "Epoch: 100%|██████████| 1/1 [00:00<00:00,  5.44it/s]\n"
      ]
     }
    ],
@@ -333,7 +313,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -348,16 +328,16 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Extracting variable: cat_or_dog: 100%|██████████| 2/2 [00:00<00:00,  2.36it/s]\n"
+      "Extracting variable: cat_or_dog: 100%|██████████| 2/2 [00:00<00:00,  2.39it/s]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Running LF: Q&A → NLI Transformer\n",
+      "Running LF: Q&A → Similarity Transformer\n",
       "Loading Resources.\n",
-      "Fine tuned Sequence Classifier model found, loading...\n",
+      "Fine tuning similarity model found, loading...\n",
       "Fine tuned Q&A model found, loading...\n"
      ]
     },
@@ -366,13 +346,20 @@
      "output_type": "stream",
      "text": [
       "The model 'RobertaForQuestionAnsweringWithNegatives' is not supported for question-answering. Supported models are ['QDQBertForQuestionAnswering', 'FNetForQuestionAnswering', 'GPTJForQuestionAnswering', 'LayoutLMv2ForQuestionAnswering', 'RemBertForQuestionAnswering', 'CanineForQuestionAnswering', 'RoFormerForQuestionAnswering', 'BigBirdPegasusForQuestionAnswering', 'BigBirdForQuestionAnswering', 'ConvBertForQuestionAnswering', 'LEDForQuestionAnswering', 'DistilBertForQuestionAnswering', 'AlbertForQuestionAnswering', 'CamembertForQuestionAnswering', 'BartForQuestionAnswering', 'MBartForQuestionAnswering', 'LongformerForQuestionAnswering', 'XLMRobertaForQuestionAnswering', 'RobertaForQuestionAnswering', 'SqueezeBertForQuestionAnswering', 'BertForQuestionAnswering', 'XLNetForQuestionAnsweringSimple', 'FlaubertForQuestionAnsweringSimple', 'MegatronBertForQuestionAnswering', 'MobileBertForQuestionAnswering', 'XLMForQuestionAnsweringSimple', 'ElectraForQuestionAnswering', 'ReformerForQuestionAnswering', 'FunnelForQuestionAnswering', 'LxmertForQuestionAnswering', 'MPNetForQuestionAnswering', 'DebertaForQuestionAnswering', 'DebertaV2ForQuestionAnswering', 'IBertForQuestionAnswering', 'SplinterForQuestionAnswering'].\n",
-      "Extracting variable: cat_or_dog: 100%|██████████| 2/2 [00:00<00:00,  7.39it/s]\n"
+      "Extracting variable: cat_or_dog: 100%|██████████| 2/2 [00:00<00:00, 13.19it/s]\n"
      ]
     }
    ],
    "source": [
     "extractor.run(docs)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
